--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/styles.css" media="screen">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <title>Vacation</title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
     <h1>Australia Dream Vacation</h1>
-     <h2>Beautiful Beaches</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu.
+      </p>
+    </div>
+    <div class="well">
+      <div class="panel panel-info">
+          <div class="panel-heading">
+     <h2 class="panel-title">Beautiful Beaches</h2>
+   </div>
      <img src="img/beach.jpg" alt="Sunny Beach">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu. Nulla sollicitudin, ligula id lacinia ullamcorper, enim magna fringilla metus, eu ultricies justo sapien eget orci. Nunc id enim sollicitudin, hendrerit sem id, ornare tellus. Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend.
@@ -14,23 +23,44 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu. Nulla sollicitudin, ligula id lacinia ullamcorper, enim magna fringilla metus, eu ultricies justo sapien eget orci. Nunc id enim sollicitudin, hendrerit sem id, ornare tellus. Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
       </p>
-     <h2>Great Food</h2>
-     <img src="img/food.jpg" alt="Pizza">
-       <p>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu. Nulla sollicitudin, ligula id lacinia ullamcorper, enim magna fringilla metus, eu ultricies justo sapien eget orci. Nunc id enim sollicitudin, hendrerit sem id, ornare tellus. Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
-       </p>
-       <p>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu. Nulla sollicitudin, ligula id lacinia ullamcorper, enim magna fringilla metus, eu ultricies justo sapien eget orci. Nunc id enim sollicitudin, hendrerit sem id, ornare tellus. Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
-       </p>
-
-     <h2>Exotic Animals</h2>
-     <img src="img/kangaroo.jpg" alt="Kangaroo">
-       <p>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu. Nulla sollicitudin, ligula id lacinia ullamcorper, enim magna fringilla metus, eu ultricies justo sapien eget orci. Nunc id enim sollicitudin, hendrerit sem id, ornare tellus. Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
-       </p>
-       <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
-        </p>
-    </ul>
+    </div>
+  </div>
+    </div>
+      <div class="well">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+       <h2 class="panel-title">Great Food</h2>
+     </div>
+       <img src="img/food.jpg" alt="Pizza">
+         <p>
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu. Nulla sollicitudin, ligula id lacinia ullamcorper, enim magna fringilla metus, eu ultricies justo sapien eget orci. Nunc id enim sollicitudin, hendrerit sem id, ornare tellus. Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
+         </p>
+         <p>
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu. Nulla sollicitudin, ligula id lacinia ullamcorper, enim magna fringilla metus, eu ultricies justo sapien eget orci. Nunc id enim sollicitudin, hendrerit sem id, ornare tellus. Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
+         </p>
+      </div>
+    </div>
+  </div>
+      <div class="well">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+       <h2 class="panel-title">Exotic Animals</h2>
+       </div>
+       <div class="panel-body">
+        <img src="img/kangaroo.jpg" alt="Kangaroo">
+         <p>
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu. Nulla sollicitudin, ligula id lacinia ullamcorper, enim magna fringilla metus, eu ultricies justo sapien eget orci. Nunc id enim sollicitudin, hendrerit sem id, ornare tellus. Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
+         </p>
+         <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.Cras maximus id nisi sed pulvinar. Ut in justo et elit sodales imperdiet nec nec eros. Pellentesque mollis magna et pretium ullamcorper. Nullam sodales egestas mi non semper. Sed vulputate nunc quis lorem consectetur eleifend
+          </p>
+        </div>
+      </div>
+      </div>
+        <blockquote class="bg-info">
+        <p>"It's been really good seeing Austrailia!"</p>
+        <footer>Visitors of Austrailia</footer>
+      </blockquote>
   </body>
+ </div>
 </html>
