--- a/index.html
+++ b/index.html
@@ -12,6 +12,33 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu enim porta nulla placerat tincidunt quis eget arcu.
       </p>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+        <h3>Deluxe Package</h3>
+          <ul>
+            <li>$150 per night</li>
+            <li>October through November</li>
+            <li>Skydiving</li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+        <h3>Premium Package</h3>
+          <ul>
+            <li>$150 per night</li>
+            <li>October through November</li>
+            <li>Skydiving</li>
+          </ul>
+        </div>
+        <div class="col-lg-4">
+        <h3>Supreme Package</h3>
+          <ul>
+            <li>$150 per night</li>
+            <li>October through November</li>
+            <li>Skydiving</li>
+          </ul>
+        </div>
+    </div>
     <div class="well">
       <div class="panel panel-info">
           <div class="panel-heading">
